2025-02-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (magit): Enable icons in status buffer.

2025-01-24  Zhengyi Fu  <i@fuzy.me>

	* packages.el (visual-fill-column): Add new package.
	* init.el (gptel-default-mode): Set to `org-mode'.
	(+gptel-mode-h): New function.

	* init.el (toggle-map): Bind "c" to `olivetti-mode'.

	* packages.el: Reorganize package.el.

2025-01-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (org): Use valign and ftable to align tables in
	org-mode.
	* package.el: Add package valign and ftable.

	* site-lisp/pp-posframe.el (pp-posframe-yank): Remove text
	properties from inserting into buffers.

	* init.el (+custom-faces): Change cursor colors.

2025-01-21  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/eshell-extras.el (eshell/rg): New eshell command.

	* init.el (+vc/dir-here): New command.  Bound to `C-c v .'.
	(+custom-faces): Use underline to highlight incorrect whitespaces.
	Change cursor color to cyan.

2025-01-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (markdown-mode): Enable visual-line-mode.

	* early-init.el (default-frame-alist): Do not set
	`alpha-background' any more.

	* site-lisp/rust-docs.el (rust-docs--get-file):
	(rust-docs--base-path):
	(rust-docs--shr-tag-pre):
	(rust-docs--render):
	* site-lisp/gtkdoc.el (gtkdoc--parse-xml):
	(gtkdoc--extract-symbols):
	(gtkdoc--shr-tag-pre):
	(gtkdoc--render):
	* site-lisp/backup.el (backup-list-default-format-entry-function):
	Use `with-temp-buffer' instead of `with-work-buffer'.

	* site-lisp/compat+.el:
	* site-lisp/keymap+.el: Removed.

	* init.el: Bind <f5> to `project-recompile'.
	Enable color emoji when using Xft.

2025-01-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (p-search): Fix loading error.

2025-01-16  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove custom keybinding for C-x C-c.

2025-01-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (mm-discouraged-alternatives): Set value of
	`mm-discouraged-alternatives' directly.
	(meow-setup): Set `meow-use-clipboard' to t.  Customize
	`meow-mode-state-list'.